--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,10 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+.gridCenter {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
