login page auth errors validations

--- a/src/app/components/auth-error/auth-error.component.html
+++ b/src/app/components/auth-error/auth-error.component.html
@@ -1,1 +1,2 @@
-<ion-label color="danger"></ion-label>
+<ion-label *ngIf="ifRequired()" color="danger">{{ messageReq }}</ion-label>
+<ion-label *ngIf="ifInvalid()" color="danger">{{ messageInval }}</ion-label>
