--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,6 +14,12 @@
           formControlName="userName"
         ></ion-input>
 
+        <app-auth-error
+          [field]="fc.userName"
+          messageReq="Username is required"
+          messageInval="Username can`t contain spaces"
+        ></app-auth-error>
+
         <ion-input
           type="password"
           label="Password"
@@ -22,6 +28,12 @@
           placeholder="Password"
           formControlName="password"
         ></ion-input>
+
+        <app-auth-error
+          [field]="fc.password"
+          messageReq="Password is required"
+          messageInval="Password can`t contain spaces"
+        ></app-auth-error>
 
         <ion-grid class="loginBtns gridCenter">
           <ion-button
