fixed input error colors login page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,6 +7,8 @@
         </ion-text>
 
         <ion-input
+          [color]="fc.userName.errors?.noSpaceValidation &&'danger'"
+          color="danger"
           label="Username"
           label-placement="floating"
           fill="outline"
@@ -21,6 +23,7 @@
         ></app-auth-error>
 
         <ion-input
+          [color]="fc.password.errors?.noSpaceValidation &&'danger'"
           type="password"
           label="Password"
           label-placement="floating"
