login page spinner

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -57,6 +57,9 @@
       </ion-card>
     </form>
   </ion-grid>
+  <!-- <ion-grid class="gridCenter mySpinner">
+    <ion-spinner color="light"></ion-spinner>
+  </ion-grid> -->
 </ion-content>
 
 <!-- <ion-header [translucent]="true">
