--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -13,3 +13,17 @@
 ion-content {
     --background: var(--ion-color-primary);
 }
+
+.mySpinner {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(66,140,255, 0.7);
+}
+
+ion-spinner {
+  width: 50px;
+  height: 50px;
+}
