--- a/src/app/contacts/contacts.page.html
+++ b/src/app/contacts/contacts.page.html
@@ -1,20 +1,26 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>{{errorMsg}}</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Contacts</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content color="light" [fullscreen]="true">
   <ion-card>{{contacts |json}}</ion-card>
-  <ion-grid *ngFor="let contact of contacts" class="gridCenter">
-    <!-- [routerLink]="['/contact']" [state]="contact" -->
-    <ion-card class="contact gridCenter" (click)="openContact(contact)">
+  <!-- <ion-grid *ngFor="let contact of contacts" class="gridCenter"> -->
+  <!-- [routerLink]="['/contact']" [state]="contact" -->
+  <!-- <ion-card class="contact gridCenter" (click)="openContact(contact)">
       <div>
         <ion-card-title>{{filterName(contact)}}</ion-card-title>
         <br />
         <ion-text color="dark">{{filterPhone(contact)}}</ion-text>
       </div>
       <ion-icon name="person-circle-outline"></ion-icon>
-    </ion-card>
-  </ion-grid>
+    </ion-card> -->
+  <ion-list *ngFor="let contact of contacts" color="light" [inset]="true">
+    <ion-item>
+      <ion-label>{{filterName(contact)}}</ion-label>
+      <p>{{filterPhone(contact)}}</p>
+    </ion-item>
+  </ion-list>
+  <!-- </ion-grid> -->
 </ion-content>
