--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content class="" [fullscreen]="true">
   <ion-grid style="height: 100%" class="gridCenter">
     <form [formGroup]="form" (ngSubmit)="onSubmit(userName, password)">
-      <ion-card class="loginCard gridCenter">
+      <ion-card color="dark" class="loginCard gridCenter">
         <ion-text color="primary">
           <h1>Login</h1>
         </ion-text>
