--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -13,7 +13,7 @@
 }
 
 hr {
-    border-top: 2px solid var(--ion-color-primary);
+    border-top: 2px solid var(--ion-color-light);
 }
 
 ion-icon[name="call-outline"]{
