--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,20 +1,19 @@
 <ion-content class="" [fullscreen]="true">
   <ion-grid style="height: 100%" class="gridCenter">
-    <form [formGroup]="form" (ngSubmit)="onSubmit(userName, password)">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <ion-card color="light" class="loginCard gridCenter">
         <ion-text color="primary">
           <h1>Login</h1>
         </ion-text>
-
         <ion-input
+          [ngClass]="{'authFail': !!authFail}"
           [color]="fc.userName.errors?.noSpaceValidation  &&'danger'"
           label="Username"
           label-placement="floating"
           fill="outline"
           placeholder="Username"
-          (keydown)="clear()"
+          (click)="clear()"
           formControlName="userName"
-          #userName
         ></ion-input>
 
         <app-auth-error
@@ -24,14 +23,15 @@
         ></app-auth-error>
 
         <ion-input
-          [color]="fc.password.errors?.noSpaceValidation &&'danger'"
+          [ngClass]="{'authFail': !!authFail}"
+          [color]="fc.password.errors?.noSpaceValidation  &&'danger'"
           type="password"
           label="Password"
           label-placement="floating"
           fill="outline"
           placeholder="Password"
+          (click)="clear()"
           formControlName="password"
-          #password
         ></ion-input>
 
         <app-auth-error
@@ -57,19 +57,7 @@
       </ion-card>
     </form>
   </ion-grid>
-  <!-- <ion-grid class="gridCenter mySpinner">
+  <ion-grid [class.on]="spinner" class="gridCenter mySpinner">
     <ion-spinner color="light"></ion-spinner>
-  </ion-grid> -->
+  </ion-grid>
 </ion-content>
-
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-header collapse="condense">
-  <ion-toolbar>
-    <ion-title size="large">login</ion-title>
-  </ion-toolbar>
-</ion-header> -->
