--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -21,9 +21,19 @@ ion-content {
     top: 0;
     left: 0;
     background-color: rgba(66,140,255, 0.7);
+    transform: translateY(-150%);
+}
+
+.mySpinner.on{
+    transform: translateY(0);
+    transition: 500ms ease-in-out;    
 }
 
 ion-spinner {
   width: 50px;
   height: 50px;
+}
+
+.authFail{
+    --border-color: var(--ion-color-danger);
 }
