changed userName password

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -52,7 +52,9 @@
             fill="outline"
             >Login</ion-button
           >
-          <ion-button size="degault" fill="outline">Register</ion-button>
+          <ion-button class="registerBtn" size="degault" fill="outline"
+            >Register</ion-button
+          >
         </ion-grid>
       </ion-card>
     </form>
