--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons color="light" slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="contacts"></ion-back-button>
     </ion-buttons>
     <ion-title>Contact Info</ion-title>
   </ion-toolbar>
